fix en overflow de nosotros page

--- a/src/app/nosotros/nosotros/nosotros.component.scss
+++ b/src/app/nosotros/nosotros/nosotros.component.scss
@@ -25,6 +25,8 @@
 }
 
 .about-card {
+    width: 100%;
+    overflow: hidden;
     .img-container {
         width: 100%;
         height: auto;
